Fixed bug #55415 (php_info produces invalid anchor names)

@@ Slightly based off Johannes' patch